@@ -3455,6 +3455,113 @@ _cmp(x86_64_target_t target, const operand_vector_t *operands,
 }
 
 /*
+ * CMPXCHG (Vol. 2A 3-140)
+ *
+ *      Opcode          Instruction             Op/En   64-bit  Compat/Leg
+ *      0F B0 /r        CMPXCHG r/m8,r8         MR      Valid   Valid*
+ *      REX + 0F B0 /r  CMPXCHG r/m8**,r8       MR      Valid   N.E.
+ *      0F B1 /r        CMPXCHG r/m16,r16       MR      Valid   Valid*
+ *      0F B1 /r        CMPXCHG r/m32,r32       MR      Valid   Valid*
+ *      REX.W + 0F B1 /r
+ *                      CMPXCHG r/m64,r64       MR      Valid   N.E.
+ *
+ *      *  See IA-32 Architecture Compatibility section in the manual
+ *      ** In 64-bit mode, AH, BH, CH, DH cannot be accessed if a REX prefix is
+ *         used
+ *
+ *
+ *      Op/En   Operand1        Operand2        Operand3        Operand4
+ *      MR      ModRM:r/m(r,w)  ModRM:reg(r)    NA              NA
+ */
+static int
+_cmpxchg(x86_64_target_t target, const operand_vector_t *operands,
+     x86_64_instr_t *instr)
+{
+    operand_t *op1;
+    operand_t *op2;
+    x86_64_val_t *val1;
+    x86_64_val_t *val2;
+    int ret;
+    x86_64_enop_t enop;
+    size_t opsize;
+    size_t addrsize;
+    int opcode1;
+    int opcode2;
+    int opcode3;
+
+    if ( 2 == mvector_size(operands) ) {
+        op1 = mvector_at(operands, 0);
+        op2 = mvector_at(operands, 1);
+
+        val1 = x86_64_eval_operand(op1);
+        if ( NULL == val1 ) {
+            /* Error */
+            return -1;
+        }
+        val2 = x86_64_eval_operand(op2);
+        if ( NULL == val2 ) {
+            /* Error */
+            free(val1);
+            return -1;
+        }
+
+        if ( _is_rm8_r8(val1, val2) ) {
+            ret = _encode_mr(val1, val2, &enop);
+            opsize = SIZE8;
+            addrsize = _resolve_address_size1(val1);
+            opcode1 = 0x0f;
+            opcode2 = 0xb0;
+            opcode3 = -1;
+        } else if ( _is_rm16_r16(val1, val2) ) {
+            ret = _encode_mr(val1, val2, &enop);
+            opsize = SIZE16;
+            addrsize = _resolve_address_size1(val1);
+            opcode1 = 0x0f;
+            opcode2 = 0xb1;
+            opcode3 = -1;
+        } else if ( _is_rm32_r32(val1, val2) ) {
+            ret = _encode_mr(val1, val2, &enop);
+            opsize = SIZE32;
+            addrsize = _resolve_address_size1(val1);
+            opcode1 = 0x0f;
+            opcode2 = 0xb1;
+            opcode3 = -1;
+        } else if ( _is_rm64_r64(val1, val2) ) {
+            ret = _encode_mr(val1, val2, &enop);
+            opsize = SIZE64;
+            addrsize = _resolve_address_size1(val1);
+            opcode1 = 0x0f;
+            opcode2 = 0xb1;
+            opcode3 = -1;
+        } else {
+            ret = -1;
+        }
+
+        if ( ret < 0 ) {
+            free(val1);
+            free(val2);
+            return -EOPERAND;
+        }
+        ret = _build_instruction(target, &enop, opsize, addrsize, instr);
+        if ( ret < 0 ) {
+            free(val1);
+            free(val2);
+            return -EOPERAND;
+        }
+        instr->opcode1 = opcode1;
+        instr->opcode2 = opcode2;
+        instr->opcode3 = opcode3;
+
+        free(val1);
+        free(val2);
+
+        return 0;
+    } else {
+        return -EOPERAND;
+    }
+}
+
+/*
  * JMP (Vol. 2A 3-424)
  *
  *      Opcode          Instruction             Op/En   64-bit  Compat/Leg
@@ -4170,6 +4277,9 @@ arch_assemble_x86_64(stmt_vector_t *vec)
             } else if ( 0 == strcasecmp("cmp", stmt->u.instr->opcode) ) {
                 /* CMP */
                 ret = _cmp(target, stmt->u.instr->operands, &instr);
+            } else if ( 0 == strcasecmp("cmpxchg", stmt->u.instr->opcode) ) {
+                /* CMPXCHG */
+                ret = _cmpxchg(target, stmt->u.instr->operands, &instr);
             } else if ( 0 == strcasecmp("jmp", stmt->u.instr->opcode) ) {
                 /* JMP */
                 ret = _jmp(target, stmt->u.instr->operands, &instr);
